--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -230,7 +230,7 @@
                         <div>
                             <div class="image-container">
                                 <Image class="blur-image" Source="@EditGroupBuyDto.LogoURL" Text="Logo Image" Fluid />
-                                <button class="delete-button" @onclick="() => DeleteLogoAsync(EditGroupBuyDto.BannerURL)">
+                                <button class="delete-button" @onclick="() => DeleteLogoAsync(EditGroupBuyDto.LogoURL)">
                                     <i class="fa fa-trash"></i>
                                 </button>
                             </div>
