Commit For Pk-1403

--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -2185,8 +2185,9 @@
         </ModalBody>
         <ModalFooter>
 
-            <Button Color="Color.Secondary" Clicked="@CloseCropModal">@L["Cancel"]</Button>
-            <Button Color="Color.Primary" Disabled="@croppedImage.IsNullOrWhiteSpace()" Clicked="@CropImageAsync">@L["Save"]</Button>
+            <Button Color="Color.Danger" Clicked="@CloseCropModal">@L["Cancel"]</Button>
+             
+            <Button Color="Color.Primary"  Clicked="@CropImageAsync">@L["Save"]</Button>
         </ModalFooter>
     </ModalContent>
 </Modal>
